# aws-starter

./: .gitignore  .mcp.json  CLAUDE.md  CONTEXT_GRAPH.md  INTEGRATE.md  INTEGRATE_V2.md  README.md  READ_ONLY.md  STRANDS.md  test-s3-access.sh
agentcore-neo4j-mcp-agent/: ORCHESTRATOR.md  README.md  agent.py  agent.sh  aircraft-agent.py  invoke_agent.py  local_test.py  pyproject.toml  simple-agent.py  sync-credentials.sh
agentcore-neo4j-mcp-agent/.bedrock_agentcore/aircraft_agent/: dependencies.hash
agentcore-neo4j-mcp-agent/basic-agent/: Dockerfile  README.md  agent.sh  aircraft-agent.py  invoke_agent.py  pyproject.toml  queries.txt  random-query.sh  simple-agent.py
agentcore-neo4j-mcp-agent/basic-agent/.bedrock_agentcore/aircraft_agent/: dependencies.hash
agentcore-neo4j-mcp-agent/cfn/: agent-runtime.yaml  cleanup.sh  deploy.sh
agentcore-neo4j-mcp-agent/finance-agent/: README.md  pyproject.toml  simple-agent.py
agentcore-neo4j-mcp-agent/finance-agent-gateway/: README.md  agent.py  pyproject.toml  simple-agent.py
agentcore-neo4j-mcp-agent/orchestrator-agent/: Dockerfile  README.md  agent.sh  invoke_agent.py  maintenance_agent.py  operations_agent.py  orchestrator_agent.py  pyproject.toml  queries.txt
agentcore-neo4j-mcp-agent/orchestrator-agent/.bedrock_agentcore/orchestrator_agent/: dependencies.hash
aura-agents/: .env.example  README.md  aura_agent_demo.ipynb  cli.py  main.py  pyproject.toml
aura-agents/examples/: async_usage.py  basic_usage.py  interactive_chat.py
aura-agents/src/: __init__.py  client.py  models.py
databrick_samples/: README.md  neo4j-mcp-agent-deploy.ipynb  neo4j-mcp-http-connection.ipynb  neo4j_mcp_agent.py
docs/: ARCHITECTURE.md
foundation_samples/sample-agentcore-mcp-server/: README.md  pyproject.toml  sample_two_stack.py
foundation_samples/sample-agentcore-mcp-server/infra_utils/: agentcore_role.py
foundation_samples/sample-agentcore-mcp-server/mcp-server/: Dockerfile
foundation_samples/simple-agentcore-agent/: README.md  app.py  sample_one_stack.py
foundation_samples/simple-agentcore-agent/agent-code/: agent.py
foundation_samples/simple-oauth-gateway/: FIX_32.md  README.md  app.py  deploy.sh  requirements.txt
foundation_samples/simple-oauth-gateway/infra_utils/: oauth_provider_lambda.py
langgraph-neo4j-mcp-agent/: .inference-profile-haiku.env  .inference-profile-sonnet.env  .inference-profile-sonnet4.env  .inference-profile-sonnet45.env  .inference-profile.env  IAM-SETUP.md  IAM.md  MCP_WTF.md  MODEL.md  README.md  agent.py  agent.sh  minimal_agent.py  minimal_langgraph_agent.ipynb  neo4j_mcp_agent.ipynb  neo4j_simple_mcp_agent.ipynb  neo4j_strands_mcp_agent.ipynb  pyproject.toml  setup-inference-profile.sh  simple-agent.py  test_fastmcp.py  test_mcp.ipynb  test_mcp.py  test_models.ipynb
neo4j-agentcore-mcp-server/: .env.sample  ARCHITECTURE.md  CLAUDE_DESKTOP.md  README.md  cloud-http.sh  cloud.sh  deploy.sh  local.sh  pyproject.toml  test-neo4j-connection.sh
neo4j-agentcore-mcp-server/cdk/: app.py  cdk.json  neo4j_mcp_stack.py  pyproject.toml
neo4j-agentcore-mcp-server/cdk/resources/oauth_provider/: index.py
neo4j-agentcore-mcp-server/cdk/resources/password_setter/: cfnresponse.py
neo4j-agentcore-mcp-server/client/: gateway_client.py  mcp_local_client.py  mcp_operations.py
neo4j-mcp-server/: APP_RUNNER.md  M2M.md  README.md  STANDALONE.md  STATUS.md  app.py  deploy.sh  local-build.sh  local-test.sh  pyproject.toml
neo4j-mcp-server/client/: demo.py
neo4j-mcp-server/mcp-server/: Dockerfile  requirements.txt  server.py
neo4j-mcp-server/neo4j_mcp/: __init__.py  stack.py
neo4j-mcp-server/neo4j_mcp/constructs/: __init__.py  agentcore.py  cognito.py  iam_roles.py
neo4j-mcp-server/neo4j_mcp/lambdas/: __init__.py  auth_interceptor.py  oauth_provider.py  runtime_wait.py
sagemaker-agents/: notes.md
sample-agentcore-mcp-server/: README.md  app.py  cdk.json  test_mcp_server.py
sample-agentcore-mcp-server/infra_utils/: __init__.py
sample-agentcore-mcp-server/mcp-server/: mcp_server.py
sample-mcp-agent/: README.md  agent.sh  pyproject.toml  simple-agent.py
simple-agentcore-agent/: SIMPLE_CHALLENGES.md  pyproject.toml  test_agent.py
simple-agentcore-agent/agent-code/: Dockerfile
simple-agentcore-agent/infra_utils/: __init__.py
simple-neo4j-mcp-server/: .env.sample  ARCHITECTURE.md  CLAUDE_DESKTOP.md  README.md  cloud-http.sh  cloud.sh  deploy.sh
simple-neo4j-mcp-server/cdk/: .gitignore  app.py  neo4j_mcp_stack.py  requirements.txt
simple-neo4j-mcp-server/cdk/resources/password_setter/: index.py
simple-neo4j-mcp-server/cdk/resources/runtime_health_check/: index.py
simple-neo4j-mcp-server/client/: mcp_local_client.py  mcp_operations.py  pyproject.toml
simple-oauth-gateway/: cdk.json  setup_users.py  simple_oauth_stack.py  test.sh
simple-oauth-gateway/client/: demo.py
simple-oauth-gateway/docs/: ARCHITECTURE.md
simple-oauth-gateway/infra_utils/: __init__.py  auth_interceptor_lambda.py  runtime_health_check_lambda.py
simple-oauth-gateway/mcp-server/: Dockerfile  server.py
strands-test/: Dockerfile  README.md  cleanup.py  deploy.py  deployment_info.json  pyproject.toml  redeploy.py  requirements.txt  strands_claude.py  strands_claude_runtime.py  test_invoke.py
