[project]
name = "neo4j-mcp-agent"
version = "0.1.0"
description = "LangGraph ReAct agent for Neo4j MCP server deployed on AgentCore Runtime"
requires-python = ">=3.10"
dependencies = [
    "bedrock-agentcore",
    "bedrock-agentcore-starter-toolkit",
    "strands-agents",
    "langchain>=1.2.0",
    "langgraph>=1.0.6",
    "langchain-aws>=1.2.0",
    "langchain-mcp-adapters>=0.2.0",
    "httpx>=0.28.0",
    "boto3>=1.42.0",
    "pyyaml>=6.0",
]
