[project]
name = "agentcore-neo4j-mcp-agent-tools"
version = "0.1.0"
description = "Local testing tools for Neo4j MCP agents on AgentCore"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.scripts]
local-test = "local_test:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["local_test.py"]
