[project]
name = "strands-test"
version = "0.1.0"
description = "Test Strands Agents with Bedrock AgentCore Runtime"
requires-python = ">=3.10"
dependencies = [
    "strands-agents",
    "strands-agents-tools",
    "boto3",
    "bedrock-agentcore<=0.1.5",
    "bedrock-agentcore-starter-toolkit==0.1.14",
    "ipykernel",
]
